# sphinx-uml

./: .buildinfo  .gitignore  .readthedocs.yaml  HISTORY.md  Makefile  README.md  TODO.md  authors.html  developers.html  genindex.html  history.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: authors.doctree  developers.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree
.doctrees/api/: index.doctree
.doctrees/users/: automatic_documentation.doctree  configuration.doctree  examples.doctree  index.doctree  terminology.doctree  troubleshouting.doctree  usage_rst.doctree
.github/workflows/: publish_on_pypi.yml
_sources/: index.rst.txt  installation.md.txt
api/: index.html
docs/: .gitignore  conf.py  installation.md
docs/api/: index.rst
example/: .gitignore  Makefile  README.md  pyproject.toml
example/docs/: .gitignore  conf.py
example/docs/_templates/: module.rst.jinja  package.rst.jinja
example/docs/api/: index.rst
example/docs/developers/: documentation.md  index.rst
example/src/example/: __init__.py  a.py
example/src/example/module/: __init__.py  b.py  b1.py
example/src/example/module/submodule/: __init__.py  c.py  c1.py
sphinx_pyreverse/: cli.py  main.py  sphinx_html_proxy.py  uml_generate_directive.py
sphinx_uml/: __init__.py  pyreverse.py  uml_generate_directive.py
tests/: test_init.py
users/: automatic_documentation.html  configuration.html  examples.html  index.html  terminology.html  troubleshouting.html  usage_rst.html
(+16 files in other folders)
